feat: Implementação de tela para contatos de funcionários

--- a/index.html
+++ b/index.html
@@ -29,60 +29,59 @@
             <img src="./assets/images/matriz.png" alt="Banner Matriz" class="profile-banner">
         </div>
 
-        <div class="section-title">Setores</div>   
+        <div class="section-title">Nossos setores</div>   
+        <p class="sub-title">Acesse e fale com um de nossos colaboradores</p>
 
         <!-- LISTA DE LINKS -->
         <div class="links-container">
             
             <!-- Link 1 -->
-            <a href="./pages/vendedores.html?setor=confeccao" class="link-btn">
+            <a href="./pages/confeccao&calcados.html" class="link-btn">
                 <div class="link-thumb">
                     <img src="./assets/images/calcados.jpg" alt="Icone">
                 </div>
                 <span class="link-text">Confecção e Calçados</span>
-                <div class="link-action"><i class="fa-solid fa-ellipsis-vertical"></i></div>
             </a>
 
             <!-- Link 2 -->
-            <a href="./pages/vendedores.html?setor=moveis" class="link-btn">
+            <a href="./pages/moveis&eletro.html" class="link-btn">
                 <div class="link-thumb">
                     <img src="./assets/images/moveis.jpg" alt="Icone">
                 </div>
                 <span class="link-text">Móveis e Eletrodemésticos</span>
-                <div class="link-action"><i class="fa-solid fa-ellipsis-vertical"></i></div>
             </a>
 
             <!-- Link 3 -->
-            <a href="#" class="link-btn">
+            <a href="./pages/tercidos.html" class="link-btn">
                 <div class="link-thumb">
                     <img src="./assets/images/tecidos.jpg" alt="Icone">
                 </div>
                 <span class="link-text">Tecidos, Cama, Mesa e Banho</span>
-                <div class="link-action"><i class="fa-solid fa-ellipsis-vertical"></i></div>
             </a>
 
-            <a href="#" class="link-btn">
+            <a href="./pages/pagamento&fatura.html" class="link-btn">
                 <div class="link-thumb">
                     <img src="./assets/images/financeiro.jpg" alt="Icone">
                 </div>
                 <span class="link-text">Pagamentos de faturas</span>
-                <div class="link-action"><i class="fa-solid fa-ellipsis-vertical"></i></div>
             </a>
-            <a href="#" class="link-btn">
+            <a href="./pages/negociacoes.html" class="link-btn">
                 <div class="link-thumb">
                     <img src="./assets/images/negociacao.jpg" alt="Icone">
                 </div>
                 <span class="link-text">Setor de negociações</span>
-                <div class="link-action"><i class="fa-solid fa-ellipsis-vertical"></i></div>
             </a>
 
         </div>
+
+        <div class="section-title-rodape">Acesse nossas Redes sociais</div>   
+        <p class="sub-title-rodape">Confira as melhores promoções da cidade</p>
 
         <!-- RODAPÉ SOCIAL -->
         <div class="social-footer">
             <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-regular fa-envelope"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
         </div>
 
         <div class="footer-logo">
