test: implementação de um novo header para as páginas de contatos

--- a/pages/confeccao&calcados.html
+++ b/pages/confeccao&calcados.html
@@ -29,10 +29,16 @@
 
         <!-- PERFIL -->
         <div class="profile-section">
-            <img src="../assets/images/matriz.png" alt="Banner Matriz" class="profile-banner">
+            <div class="info-card">
+                <div class="card-icon-container">
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </div>
+                <h1 class="card-title">Confecção e Calçados</h1>
+                <p class="card-subtitle">As melhores marcas e estilos para você</p>
+            </div>
+
         </div>
 
-        <div class="section-title">Confecção e Calçados</div>   
         <p class="sub-title">Fale com um de nossos colaboradores</p>
 
         <div class="collaborator-list">
