style: Modificação visual no rodapé social

--- a/index.html
+++ b/index.html
@@ -77,15 +77,27 @@
         <div class="section-title-rodape">Acesse nossas Redes sociais</div>   
         <p class="sub-title-rodape">Confira as melhores promoções da cidade</p>
 
-        <!-- RODAPÉ SOCIAL -->
-        <div class="social-footer">
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <div class="social-vertical-list">
+            
+            <a href="#" class="social-pill-btn">
+                <i class="fa-brands fa-whatsapp" style="color: #25D366;"></i>
+                <span>WhatsApp</span>
+            </a>
+
+            <a href="#" class="social-pill-btn">
+                <i class="fa-brands fa-instagram" style="color: #E1306C;"></i>
+                <span>Instagram</span>
+            </a>
+
+            <a href="#" class="social-pill-btn">
+                <i class="fa-brands fa-facebook" style="color: #1877F2;"></i>
+                <span>Facebook</span>
+            </a>
+
         </div>
 
         <div class="footer-logo">
-            <a href="#" class="cta-btn">Grupo de Clientes(Promoções)</a>
+            <a href="#" class="social-pill-btn">Grupo de Clientes (Promoções)</a>
         </div>
 
     </div>
