--- a/pages/negociacoes.html
+++ b/pages/negociacoes.html
@@ -29,10 +29,16 @@
 
         <!-- PERFIL -->
         <div class="profile-section">
-            <img src="../assets/images/matriz.png" alt="Banner Matriz" class="profile-banner">
+            <div class="info-card">
+                <div class="card-icon-container">
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </div>
+                <h1 class="card-title">Setor de negociações</h1>
+                <p class="card-subtitle">Soluções claras e acessíveis para ajudar você a negociar e quitar suas dívidas com tranquilidade</p>
+            </div>
+
         </div>
 
-        <div class="section-title">Setor de negociações</div>   
         <p class="sub-title">Fale com um de nossos colaboradores</p>
 
         <div class="collaborator-list">
@@ -82,15 +88,27 @@
         <div class="section-title-rodape">Acesse nossas Redes sociais</div>   
         <p class="sub-title-rodape">Confira as melhores promoções da cidade</p>
 
-        <!-- RODAPÉ SOCIAL -->
-        <div class="social-footer">
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <div class="social-vertical-list">
+            
+            <a href="#" class="social-pill-btn">
+                <i class="fa-brands fa-whatsapp" style="color: #25D366;"></i>
+                <span>WhatsApp</span>
+            </a>
+
+            <a href="#" class="social-pill-btn">
+                <i class="fa-brands fa-instagram" style="color: #E1306C;"></i>
+                <span>Instagram</span>
+            </a>
+
+            <a href="#" class="social-pill-btn">
+                <i class="fa-brands fa-facebook" style="color: #1877F2;"></i>
+                <span>Facebook</span>
+            </a>
+
         </div>
 
         <div class="footer-logo">
-            <a href="#" class="cta-btn">Grupo de Clientes(Promoções)</a>
+            <a href="#" class="social-pill-btn">Grupo de Clientes (Promoções)</a>
         </div>
 
     </div>
